# wallet

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.stagex  LICENSE-MIT  Makefile  README.md  deny.toml  docker-compose.yaml  flake.nix
.cargo/: config.toml
.github/dep-policy/: README.md  dep_policy.py  governed-libs.toml
.github/workflows/: audits.yml  binaries-and-deb-release.yml  book.yml  build-and-push-docker-hub.yaml  build-arm64-nix.yml  ci-basic-build.yml  ci.yml  deb-release.yml  dep-head-compat.yml  dep-version-consistency.yml  lints.yml  release.yml  test-docker-container.yml  zallet-rpc-diff.yml  zizmor.yml
book/: book.toml
book/src/: 404.md  README.md  SUMMARY.md
book/src/cli/: README.md  add-rpc-user.md  example-config.md  export-mnemonic.md  generate-encryption-identity.md  generate-identity.md  generate-mnemonic.md  import-mnemonic.md  init-wallet-encryption.md  migrate-zcash-conf.md  migrate-zcashd-wallet.md  rpc-cli.md  rpc.md  start.md
book/src/cli/repair/: README.md  truncate-wallet.md
book/src/guide/: setup.md
book/src/guide/installation/: README.md  debian.md
book/src/slsa/: slsa.md
book/src/supply-chain/: README.md
book/src/zcashd/: README.md  json_rpc.md
docker/: Dockerfile  README.md  entrypoint.sh
supply-chain/: audits.toml  config.toml
tools/zallet-rpc-diff/: Cargo.toml  DESIGN_NOTE.md  PULL_REQUEST_DRAFT.md  RUNBOOK.md  manifest.toml  report.json  report.md
tools/zallet-rpc-diff/crates/zallet-parity-cli/: Cargo.toml
tools/zallet-rpc-diff/crates/zallet-parity-cli/src/: main.rs
tools/zallet-rpc-diff/crates/zallet-parity-cli/tests/: cli_tests.rs
tools/zallet-rpc-diff/crates/zallet-parity-core/: Cargo.toml
tools/zallet-rpc-diff/crates/zallet-parity-core/src/: client.rs  differ.rs  engine.rs  expected_diffs.rs  lib.rs  manifest.rs  normalizer.rs  report.rs  types.rs
tools/zallet-rpc-diff/crates/zallet-parity-testkit/: Cargo.toml
tools/zallet-rpc-diff/crates/zallet-parity-testkit/src/: lib.rs
tools/zallet-rpc-diff/examples/: endpoints.env  expected_diffs.toml  sample_report.json  sample_report.md
utils/: build.sh  compat.sh
zallet/: Cargo.toml  build.rs
zallet/ci/: integration-features
zallet/i18n/en-US/: zallet.ftl
zallet/src/: application.rs  cli.rs  commands.rs  components.rs  config.rs  error.rs  i18n.rs  lib.rs  main.rs  network.rs  remote.rs  rosetta.rs  task.rs
zallet/src/commands/: add_rpc_user.rs  example_config.rs  export_mnemonic.rs  generate_encryption_identity.rs  generate_identity.rs  generate_mnemonic.rs  import_mnemonic.rs  init_wallet_encryption.rs  migrate_zcash_conf.rs  migrate_zcashd_wallet.rs  query_cli.rs  regtest.rs  repair.rs  rpc_cli.rs  run.rs  start.rs  tui.rs
zallet/src/commands/regtest/: generate_account_and_miner_address.rs
zallet/src/commands/repair/: truncate_wallet.rs
zallet/src/commands/tui/: app.rs  client.rs  event.rs  qr.rs  terminal.rs  ui.rs  views.rs
zallet/src/commands/tui/views/: accounts.rs  addresses.rs  balances.rs  dashboard.rs  logs.rs  seed.rs  send.rs  transactions.rs
zallet/src/components/: chain.rs  chain_state.rs  chain_view.rs  database.rs  json_rpc.rs  keystore.rs  sync.rs  testing.rs  tracing.rs  wallet.rs
zallet/src/components/chain/: error.rs  read_state.rs  zaino.rs  zebra.rs
zallet/src/components/chain/zebra/: convert.rs  reader.rs  rpc.rs
zallet/src/components/database/: connection.rs  ext.rs  testing.rs  tests.rs
zallet/src/components/database/ext/: migrations.rs
zallet/src/components/database/ext/migrations/: initial_setup.rs
zallet/src/components/json_rpc/: asyncop.rs  balance.rs  fund_source.rs  methods.rs  payments.rs  server.rs  utils.rs
zallet/src/components/json_rpc/methods/: PCZT_DESIGN.md  convert_tex.rs  decode_raw_transaction.rs  decode_script.rs  export_key.rs  export_mnemonic.rs  get_account.rs  get_address_for_account.rs  get_balances.rs  get_new_account.rs  get_notes_count.rs  get_operation.rs  get_raw_transaction.rs  get_transaction.rs  get_wallet_info.rs  get_wallet_status.rs  help.rs  import_key.rs  import_viewing_key.rs  list_accounts.rs  list_addresses.rs  list_operation_ids.rs  list_transactions.rs  list_unified_receivers.rs  list_unspent.rs  lock_wallet.rs  openrpc.rs  pczt_combine.rs  pczt_common.rs  pczt_create.rs  pczt_decode.rs  pczt_extract.rs  pczt_finalize.rs  pczt_fund.rs  pczt_prove.rs  pczt_sign.rs  recover_accounts.rs  sign_message.rs  stop.rs  unlock_wallet.rs  (+12 more)
zallet/src/components/json_rpc/server/: authorization.rs  cookie.rs  error.rs  http_request_compatibility.rs  rpc_call_compatibility.rs
zallet/src/components/keystore/: db.rs  error.rs  testing.rs
zallet/src/components/keystore/db/: migrations.rs
zallet/src/components/keystore/db/migrations/: initial_setup.rs
zallet/src/components/sync/: cache.rs  error.rs  locator.rs  steps.rs
zallet/src/components/wallet/: connection.rs
zallet/tests/: acceptance.rs  cli_tests.rs  config.rs
zallet/tests/cmd/: example_config.toml  migrate_zcash_conf_mainnet.toml  migrate_zcash_conf_regtest.toml  migrate_zcash_conf_testnet.toml
zallet/tests/cmd/example_config.out/: zallet.toml
zallet/tests/cmd/migrate_zcash_conf_mainnet.in/: zcash.conf
zallet/tests/cmd/migrate_zcash_conf_regtest.in/: zcash.conf
zallet/tests/cmd/migrate_zcash_conf_testnet.in/: zcash.conf
