[workspace]
members = [
    "zallet",
    "tools/zallet-rpc-diff/crates/zallet-parity-core",
    "tools/zallet-rpc-diff/crates/zallet-parity-cli",
    "tools/zallet-rpc-diff/crates/zallet-parity-testkit",
]
# `vendor/core2-shim-0.3` and `vendor/core2-shim-0.4` are referenced from the
# `[patch.crates-io]` table below, but excluded from the workspace because
# Cargo requires workspace member crate names to be unique and both shims must
# be named `core2` to satisfy the resolver.
exclude = [
    "vendor/core2-shim-0.3",
    "vendor/core2-shim-0.4",
]
resolver = "2"

[workspace.package]
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/zcash/wallet"
license = "MIT OR Apache-2.0"
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
# Async
async-trait = "0.1"
futures = "0.3"
tokio = "1"

# Build script
shadow-rs = { version = "1.2", default-features = false }

# Documentation
documented = "0.9"
phf = { version = "0.12", features = ["macros"] }
quote = "1"
syn = "2"

# Filesystem
fmutex = "0.3"
home = "0.5"
known-folders = "1"
xdg = "2.5"

# Hashing
hmac = "0.12"
ripemd = "0.1"
sha2 = "0.10"

# Key storage
age = { version = "0.11", features = ["armor", "cli-common", "plugin"] }
bip0039 = "0.12"

# Localization
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

# Packaging
clap_complete = "4"
clap_mangen = "0.2"
embed-licensing = "0.3"
flate2 = "1"
spdx = "0.10"

# Parsing and serialization
base64ct = "1.8"
hex = "0.4"
serde = { version = "1", features = ["serde_derive"] }
semver = "1"
serde_json = { version = "1", features = ["arbitrary_precision", "raw_value"] }
toml = "0.8"
zcash_address = "0.11"

# Randomness
rand = "0.8"

# Secret management
secrecy = { version = "0.8", features = ["serde"] }

# CLI
abscissa_core = "0.9"
abscissa_tokio = "0.9"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
indicatif = "0.17"
rpassword = "7"

# RPC
http-body-util = "0.1"
hyper = "1"
jsonrpsee = "0.24"
jsonrpsee-http-client = { version = "0.24", default-features = false }
nix = "0.29" # `stop` RPC method
rust_decimal = { version = "1.37", default-features = false, features = [
    "serde-arbitrary-precision",
    "serde-float",
] }
schemars = "1"
tower = "0.4"

# Testing
assert-json-diff = "2"
once_cell = "1.2"
regex = "1.4"
tempfile = "3"
trycmd = "0.15"

# Error handling
thiserror = "2"

# Tracing
console-subscriber = "0.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-log = "0.2"
tracing-subscriber = "0.3"

# Zcash consensus
zcash_protocol = "0.8"

# Zcash payment protocols
orchard = "0.13"
sapling = { package = "sapling-crypto", version = "0.7" }
transparent = { package = "zcash_transparent", version = "0.7" }
zcash_encoding = "0.4"
zcash_keys = { version = "0.13", features = ["transparent-inputs", "sapling", "orchard", "transparent-key-encoding"] }
zcash_primitives = "0.27"
zcash_proofs = "0.27"
zcash_script = "0.4.3"
secp256k1 = { version = "0.29", features = ["recovery"] }

# Zcash chain state
zaino-common = "0.1"
zaino-fetch = "0.1"
zaino-proto = "0.1"
zaino-state = "0.1"
zebra-chain = "2.0"
zebra-rpc = "2.0.1"
zebra-state = "2.0"

# Zcash wallet
deadpool = "0.12"
deadpool-sqlite = "0.12"
deadpool-sync = "0.1"
incrementalmerkletree = "0.8.2"
rusqlite = { version = "0.37", features = ["time"] }
schemerz = "0.2"
schemerz-rusqlite = "0.370.0"
shardtree = "0.6"
time = "0.3"
uuid = "1"
zcash_client_backend = "0.22"
zcash_client_sqlite = "0.20"
zcash_note_encryption = "0.4"
zip32 = "0.2"
bip32 = "0.2"

# Zcashd wallet migration
zewif = { version = "0.1" }
zewif-zcashd = { version = "0.1" }
which = "8.0"
anyhow = "1.0"

# lightwalletd (temporary)
tonic = "0.14"

[patch.crates-io]
# TEMPORARY: All `core2` versions on crates.io were yanked by upstream on
# 2026-04-14, breaking fresh dependency resolution because we still pull
# `core2 ^0.3` (via `equihash 0.2.2`) and `core2 ^0.4` (via `zaino-state`)
# transitively. Both entries below redirect those `core2` requests to local
# shims that re-export `corez` (the Zcash ecosystem's clean-room replacement,
# https://github.com/zcash/corez). See `vendor/core2-shim-0.3/README.md` for
# context and removal criteria.
core2 = { path = "vendor/core2-shim-0.3" }
core2_v04 = { package = "core2", path = "vendor/core2-shim-0.4" }

age = { git = "https://github.com/str4d/rage.git", rev = "92f437bc2a061312fa6633bb70c91eef91142fd4" }

zewif = { git = "https://github.com/zcash/zewif.git", rev = "f84f80612813ba00a0a8a9a5f060bd217fa981cc" }
zewif-zcashd = { git = "https://github.com/zcash/zewif-zcashd.git", rev = "9c72d1805c269f88ea5caa4eb33c6d38013b9776" }

zaino-common = { git = "https://github.com/zingolabs/zaino.git", rev = "15b81f110349b34090341b3ab8b7cd58c7b9aeef" }
zaino-fetch = { git = "https://github.com/zingolabs/zaino.git", rev = "15b81f110349b34090341b3ab8b7cd58c7b9aeef" }
zaino-proto = { git = "https://github.com/zingolabs/zaino.git", rev = "15b81f110349b34090341b3ab8b7cd58c7b9aeef" }
zaino-state = { git = "https://github.com/zingolabs/zaino.git", rev = "15b81f110349b34090341b3ab8b7cd58c7b9aeef" }

[profile.release]
debug = "line-tables-only"
