[workspace]
members = ["zallet"]
resolver = "2"

[workspace.package]
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/zcash/wallet"
license = "MIT OR Apache-2.0"
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
# Async
async-trait = "0.1"
futures = "0.3"
tokio = "1"

# Build script
shadow-rs = { version = "1.2", default-features = false }

# Documentation
documented = "0.9"
phf = { version = "0.12", features = ["macros"] }
quote = "1"
syn = "2"

# Filesystem
fmutex = "0.3"
home = "0.5"
known-folders = "1"
xdg = "2.5"

# Hashing
hmac = "0.12"
ripemd = "0.1"
sha2 = "0.10"

# Key storage
age = { version = "0.11", features = ["armor", "cli-common", "plugin"] }
bip0039 = "0.12"

# Localization
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

# Packaging
clap_complete = "4"
clap_mangen = "0.2"
embed-licensing = "0.3"
flate2 = "1"
spdx = "0.10"

# Parsing and serialization
base64ct = "1.8"
hex = "0.4"
serde = { version = "1", features = ["serde_derive"] }
semver = "1"
serde_json = { version = "1", features = ["arbitrary_precision", "raw_value"] }
toml = "0.8"
zcash_address = "0.12"

# Randomness
rand = "0.8"

# Secret management
secrecy = { version = "0.8", features = ["serde"] }

# CLI
abscissa_core = "0.9"
abscissa_tokio = "0.9"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7"

# RPC
http-body-util = "0.1"
hyper = "1"
jsonrpsee = "0.24"
jsonrpsee-http-client = { version = "0.24", default-features = false }
nix = "0.29" # `stop` RPC method
rust_decimal = { version = "1.37", default-features = false, features = [
    "serde-arbitrary-precision",
    "serde-float",
] }
schemars = "1"
tower = "0.4"

# Testing
once_cell = "1.2"
proptest = "1.9"
regex = "1.4"
tempfile = "3"
trycmd = "0.15"

# Tracing
console-subscriber = "0.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-log = "0.2"
tracing-subscriber = "0.3"

# Zcash consensus
zcash_protocol = "0.9"

# Zcash payment protocols
orchard = "0.14"
pczt = { version = "0.7", features = ["prover", "signer"] }
sapling = { package = "sapling-crypto", version = "0.7" }
transparent = { package = "zcash_transparent", version = "0.8" }
zcash_encoding = "0.4"
zcash_keys = { version = "0.14", features = [
    "transparent-inputs",
    "sapling",
    "orchard",
    "transparent-key-encoding",
] }
zcash_primitives = "0.28"
zcash_proofs = "0.28"
zcash_script = "0.4.3"
secp256k1 = { version = "0.29", features = ["recovery"] }

# Zcash chain state
zaino-common = "0.2"
zaino-fetch = "0.2"
zaino-state = "0.3"
zebra-chain = "10"
zebra-rpc = "10"
zebra-state = "9"

# Encodings
base64 = "0.22"

# Zcash wallet
deadpool = "0.12"
deadpool-sqlite = "0.12"
deadpool-sync = "0.1"
incrementalmerkletree = "0.8.2"
rusqlite = { version = "0.37", features = ["time"] }
schemerz = "0.2"
schemerz-rusqlite = "0.370.0"
shardtree = "0.6"
time = "0.3"
uuid = "1"
zcash_client_backend = "0.23"
zcash_client_sqlite = "0.21"
zcash_note_encryption = "0.4"
zip32 = "0.2"
bip32 = { version = "0.6.0-pre.1", default-features = false }

# Zcashd wallet migration
zewif = { version = "0.1" }
zewif-zcashd = { version = "0.1" }
which = "8.0"
anyhow = "1.0"

# lightwalletd (temporary)
tonic = "0.14"

[patch.crates-io]
# TEMPORARY: pin librustzcash crates to
# 4cdba554f5545050da784fc9e1eb073ae958d819 Commits beyond this point on
# `librustzcash` main introduce breaking API changes that neither `zebrad` nor
# `zaino` can currently build with. If additional librustzcash changes are
# needed, branch from this commit and pin to whatever subsequent commit
# introduces changes to that branch; merges to `librustzcash` main are
# exclusively proper history-preserving merge commits, so after such a branch
# merges the commit reference will remain valid.
equihash = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
f4jumble = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
pczt = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
transparent = { package = "zcash_transparent", git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
zcash_history = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "4cdba554f5545050da784fc9e1eb073ae958d819" }

age = { git = "https://github.com/str4d/rage.git", rev = "92f437bc2a061312fa6633bb70c91eef91142fd4" }

zewif = { git = "https://github.com/zcash/zewif.git", rev = "798d7b3554ebada05bea63b67ee66f9c2558a21a" }
zewif-zcashd = { git = "https://github.com/zcash/zewif-zcashd.git", rev = "22f8219bb2cb741b72683cbee170b6667c7da7b0" }

zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git", rev = "9a27f886a5bfb143f65d1712e912cef252426800" }
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git", rev = "9a27f886a5bfb143f65d1712e912cef252426800" }
zebra-state = { git = "https://github.com/ZcashFoundation/zebra.git", rev = "9a27f886a5bfb143f65d1712e912cef252426800" }

zaino-common = { git = "https://github.com/zingolabs/zaino.git", rev = "ed5df1a60ad69731d4d2fab515972c5ccf172326" }
zaino-fetch = { git = "https://github.com/zingolabs/zaino.git", rev = "ed5df1a60ad69731d4d2fab515972c5ccf172326" }
zaino-state = { git = "https://github.com/zingolabs/zaino.git", rev = "ed5df1a60ad69731d4d2fab515972c5ccf172326" }

[profile.release]
debug = "line-tables-only"
