[package]
name = "zallet"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A prototype wallet. Don't rely on this for privacy or with significant funds yet!"
license.workspace = true
categories.workspace = true

[dependencies]
abscissa_core.workspace = true
abscissa_tokio.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["string", "unstable-styles"] }
deadpool.workspace = true
deadpool-sqlite.workspace = true
deadpool-sync.workspace = true
futures.workspace = true
hex.workspace = true
home.workspace = true
http-body-util.workspace = true
hyper.workspace = true
i18n-embed = { workspace = true, features = ["desktop-requester"] }
i18n-embed-fl.workspace = true
jsonrpsee = { workspace = true, features = ["macros", "server"] }
orchard.workspace = true
rand.workspace = true
rusqlite.workspace = true
rust-embed.workspace = true
sapling.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
shardtree.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "rt-multi-thread"] }
toml.workspace = true
tonic.workspace = true
tower = { workspace = true, features = ["timeout"] }
transparent.workspace = true
zcash_client_backend = { workspace = true, features = [
    "lightwalletd-tonic-tls-webpki-roots",
    "orchard",
    "sync",
    "transparent-inputs",
] }
zcash_client_sqlite = { workspace = true, features = [
    "orchard",
    "transparent-inputs",
] }
zcash_primitives.workspace = true
zcash_protocol = { workspace = true, features = ["local-consensus"] }
zip32.workspace = true

[build-dependencies]
clap = { workspace = true, features = ["string", "unstable-styles"] }
clap_complete = "4"
clap_mangen = "0.2"
flate2 = "1"
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true

[dev-dependencies]
abscissa_core = { workspace = true, features = ["testing"] }
once_cell = "1.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(outside_buildscript)'] }
