[package]
name = "zallet-parity-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core library for the zallet-rpc-diff parity harness"

[dependencies]
assert-json-diff.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
zallet-parity-testkit = { path = "../zallet-parity-testkit" }
